# pinion

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/pinion-api/: Cargo.toml
crates/pinion-api/src/: config.rs  error.rs  main.rs  state.rs
crates/pinion-api/src/middleware/: auth.rs
crates/pinion-api/src/routes/: allocations.rs  auth.rs  eggs.rs  files.rs  mod.rs  nodes.rs  remote.rs  servers.rs  users.rs  ws.rs
crates/pinion-core/: Cargo.toml
crates/pinion-core/src/: error.rs  lib.rs  permissions.rs
crates/pinion-core/src/models/: allocation.rs  egg.rs  mod.rs  node.rs  server.rs  user.rs
crates/pinion-db/: Cargo.toml
crates/pinion-db/migrations/: 0001_init.sql
crates/pinion-db/src/: lib.rs
crates/pinion-db/src/repos/: allocation_repo.rs  egg_repo.rs  mod.rs  node_repo.rs  server_repo.rs  user_repo.rs
crates/pinion-wings/: Cargo.toml
crates/pinion-wings/src/: client.rs  error.rs  jwt.rs  lib.rs  types.rs  websocket.rs
frontend/: Caddyfile  Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: AsciiBox.tsx  AsciiModal.tsx  TerminalInput.tsx
frontend/src/context/: auth.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/routes/: __root.tsx  auth.tsx  index.tsx
frontend/src/routes/admin/: eggs.tsx  nodes.tsx  users.tsx
frontend/src/routes/servers/: $serverId.tsx  index.tsx
frontend/src/routes/servers/$serverId/: files.tsx  index.tsx  settings.tsx
