[workspace]
resolver = "2"
members = [
    "crates/pinion-core",
    "crates/pinion-db",
    "crates/pinion-wings",
    "crates/pinion-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["smileyfaceskobochka"]
license = "MIT"
repository = "https://github.com/smileyfaceskobochka/pinion"
rust-version = "1.80"

# Shared deps

[workspace.dependencies]

# Internal crates
pinion-core = { path = "crates/pinion-core" }
pinion-db = { path = "crates/pinion-db" }
pinion-wings = { path = "crates/pinion-wings" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# HTTP server
axum = { version = "0.8.8", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = [
    "cors",
    "trace",
    "compression-gzip",
    "request-id",
    "timeout",
] }

# HTTP client (Wings REST)
reqwest = { version = "^0.12.28", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }

# WebSocket
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
    "json",
    "macros",
] }

# Auth
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Config
config = { version = "0.15.19", features = ["toml"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async
futures-util = "0.3"

# Misc
bitflags = { version = "2", features = ["serde"] }
bon = "3.9.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
