[package]
name = "pinion-db"
description = "Database layer — SQLx repos and migrations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pinion-core = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
